# lfp_soc_ml

./: pyproject.toml
notebooks/: soc_exploration.ipynb
