[project]
name = "lfp-soc-ml"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jamie Wong", email = "jamie.lf.wong@gmail.com" }
]
dependencies = [
    "certifi==2023.7.22",
    "charset-normalizer==3.3.2",
    "cramjam==2.7.0",
    "fastparquet==2023.10.1",
    "fsspec==2023.10.0",
    "idna==3.4",
    "influxdb==5.3.1",
    "joblib==1.3.2",
    "msgpack==1.0.7",
    "numpy==1.26.2",
    "packaging==23.2",
    "paho-mqtt==1.6.1",
    "pandas==2.1.3",
    "pyarrow==14.0.1",
    "python-dateutil==2.8.2",
    "pytz==2023.3.post1",
    "requests==2.31.0",
    "scikit-learn==1.3.2",
    "scipy==1.11.3",
    "six==1.16.0",
    "threadpoolctl==3.2.0",
    "tzdata==2023.3",
    "urllib3==2.1.0",
    "xgboost==2.0.2",
    "jupyter>=1.0.0",
    "plotly>=5.22.0",
    "seaborn>=0.13.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lfp_soc_ml"]
